# projekt-dyplomowy

./: .gitignore
src/: data.yaml  obrobka.ipynb  pyproject.toml  train.txt  trenowanie.ipynb  val.txt
