[project]
name = "projekt-dyplomowy"
version = "0.1.0"
description = ""
authors = [
    {name = "Łukasz Czajka"}
]
requires-python = ">3.14.1,<3.15"
dependencies = [
    "openslide-bin (>=4.0.0.13,<5.0.0.0)",
    "openslide-python (>=1.4.3,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipympl (>=0.10.0,<0.11.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "ultralytics (>=8.4.37,<9.0.0)"
]
[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
